WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311689
REGRESSION(
302241@main
): CSS "aspect-ratio" is not honored when window is zoomed in
https://bugs.webkit.org/show_bug.cgi?id=311689
Summary
REGRESSION(302241@main): CSS "aspect-ratio" is not honored when window is zoo...
Joseph Huckaby
Reported
2026-04-07 17:14:20 PDT
Created
attachment 478957
[details]
Screenshot showing Safari zoomed in and aspect ratio of 1:1 not being honored There appears to be a bug in Safari 26.4 with the CSS "aspect-ratio" property, when the page is zoomed in. Specifically, an aspect-ratio such as "1:1" is no longer visibly square after zooming in. It becomes elongated vertically. See the live demo below, and zoom in (Cmd++) to reproduce. This just started happening as soon as I upgraded to Safari 26.4. It is also fully reproducible in Safari Technology Preview Release 240 (WebKit 20625.1.10.19.3). It is not reproducible in any older Safari versions, such as v26.0. Live Demo:
https://pixlcore.com/bugs/safari-bug-zoom-aspect-ratio.html
Bug is NOT reproducible in: - Chrome latest (v146.0.7680.178) - Firefox latest (v149.0.2) - Safari v26.0.1 and earlier Those browsers all render the pies in perfect square 1:1 aspect ratio regardless of the zoom level.
Attachments
Screenshot showing Safari zoomed in and aspect ratio of 1:1 not being honored
(325.63 KB, image/png)
2026-04-07 17:14 PDT
,
Joseph Huckaby
no flags
Details
Testcase
(275 bytes, text/html)
2026-04-08 16:30 PDT
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2026-04-07 19:38:49 PDT
It is reproducible on WebKit ToT (
310756@main
).
Radar WebKit Bug Importer
Comment 2
2026-04-08 16:14:43 PDT
<
rdar://problem/174361289
>
Sammy Gill
Comment 3
2026-04-08 16:30:18 PDT
Created
attachment 478971
[details]
Testcase Attaching reduced test case
Sammy Gill
Comment 4
2026-04-09 13:35:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62380
EWS
Comment 5
2026-04-10 08:45:18 PDT
Committed
310931@main
(9ebcc420fbbe): <
https://commits.webkit.org/310931@main
> Reviewed commits have been landed. Closing PR #62380 and removing active labels.
EWS
Comment 6
2026-04-10 14:28:37 PDT
Committed
305413.640@safari-7624-branch
(363565d442ff): <
https://commits.webkit.org/305413.640@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4920 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug