Cherry-pick 9ebcc420fbbe. rdar://174498486

REGRESSION(302241@main): CSS "aspect-ratio" is not honored when window is zoomed in
    https://bugs.webkit.org/show_bug.cgi?id=311689
    rdar://174361289

    Reviewed by Alan Baradlay.

    When we are computing a box's size in an axis (e.g. height) using an
    aspect-ratio and its minimum size in that axis (e.g. min-height) is
    auto, we need to compute its min-content size as the automatic minimum
    size.
    https://drafts.csswg.org/css-sizing-4/#aspect-ratio-minimum

    For the logical height, we have this behavior implemented in
    RenderBox::constrainLogicalHeightByMinMax.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/aspect-ratio-height-with-automatic-minimum-size-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/aspect-ratio-height-with-automatic-minimum-size-tall-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/aspect-ratio-height-with-automatic-minimum-size-tall-ref.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/aspect-ratio-height-with-automatic-minimum-size-tall.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/aspect-ratio-height-with-automatic-minimum-size.html: Added.

    * Source/WebCore/rendering/RenderBox.cpp:
    (WebCore::RenderBox::constrainLogicalHeightByMinMax const):
    When we are in the branch to compute the automatic minimum size we use
    blockSizeFromAspectRatio to get the logical height we want from the
    aspect-ratio. However, both this and intrinsicLogicalHeight are used
    sizes, which means they are already zoomed. Constructing a
    Style::MinimumSize::Fixed directly from these values results in the bug
    since we will apply zoom *again* when it is evaluated. Instead, we
    should remove the zoom from this value before constructing it.

    Canonical link: https://commits.webkit.org/310931@main

Identifier: 305413.640@safari-7624-branch